--- a/gradio_sms_text_classification.ipynb
+++ b/gradio_sms_text_classification.ipynb
@@ -321,14 +321,14 @@
         "    # Using a conditional if the prediction is \"ham\" return the message:\n",
         "    # f'The text message: \"{text}\", is not spam.' Else, return f'The text message: \"{text}\", is spam.'\n",
         "    if spam_predictions == 'ham':\n",
-        "        return f'The text message: \"{text}\", is not spam.'\n",
+        "        return f'Our app has determined that: \"{text}\", is not spam.'\n",
         "    else:\n",
         "        return f'The text message: \"{text}\", is spam.'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -342,7 +342,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Running on local URL:  http://127.0.0.1:7861\n",
+            "Running on local URL:  http://127.0.0.1:7863\n",
             "\n",
             "To create a public link, set `share=True` in `launch()`.\n"
           ]
@@ -350,7 +350,7 @@
         {
           "data": {
             "text/html": [
-              "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"http://127.0.0.1:7863/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -363,7 +363,7 @@
           "data": {
             "text/plain": []
           },
-          "execution_count": 19,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -381,7 +381,8 @@
         "# Create a sms_app that takes a textbox for the inputs and has a textbox for the output.\n",
         "# Povide labels for each textbox.\n",
         "sms_app = gr.Interface(\n",
-        "    fn= sms_prediction, inputs= gr.Textbox(label='Question'), outputs= gr.Textbox(label='Answer')\n",
+        "    fn= sms_prediction, inputs= gr.Textbox(label='What is the text message you want to test'),\n",
+        "                                  outputs= gr.Textbox(label='Our app has determined:')\n",
         ")\n",
         "\n",
         "# Launch the app.\n",
